# noisy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: FindFFTW.cmake  FindcuAlgo.cmake  FindcuFFT.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/src/: 1_license.dox  2_installation.dox  mainpage.dox
src/: CMakeLists.txt
src/backend/cpu/: backendCPU.hpp  backendCPUcomplex.cpp  backendCPUfourier.cpp  backendCPUfourier.hpp  backendCPUmemory.cpp  backendCPUop.cpp  backendCPUtransform.cpp
src/backend/cuda/: backendCUDA.hpp  backendCUDAcomplex.cu  backendCUDAfourier.cu  backendCUDAfourier.hpp  backendCUDAmemory.cu  backendCUDAop.cu  backendCUDAparams.hpp  backendCUDAtransform.cu  backendCUDAutils.hpp
src/dataStructure/: DSmatrix.cpp  dataStruct.hpp
src/dataStructure/cpu/: backendCPU.hpp
src/dataStructure/cuda/: backendCUDA.cu  backendCUDA.hpp
src/fourier/: FourierTransform.hpp
src/images/: ImageLoader.cpp  ImageLoader.hpp
src/shearlet/: SLfilter.cpp  SLfilter.hpp  SLsystem.cpp  SLsystem.hpp
src/transform/: transformMatrix.cpp  transformMatrix.hpp
src/utils/: utils.hpp
tests/: CMakeLists.txt
tests/backend/: test_BackendFourier.cpp
tests/dataStructure/: test_DSmatrix.cpp
tests/fourier/: test_FourierTransform.cpp
tests/shearlet/: test_SLcoeffs.cpp  test_SLsystem.cpp
tests/transform/: test_transformMatrix.cpp
tests/utils/: test_utils.cu  test_utils.hpp
